--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
-  "engines": {
-    "node": "18.x"
-  },
+  "version": 2,
   "builds": [
     {
       "src": "main.py",
-      "use": "@vercel/python@3.9"
+      "use": "@vercel/python"
     }
   ],
   "routes": [
