--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "main.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python@3.9"
     }
   ],
   "routes": [
