--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
   "version": 2,
   "builds": [
     {
-      "src": "main.py",
+      "src": "src/main.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/src",
       "dest": "main.py"
     }
   ]
